Refactoring the game controller and service